--- a/app/composer.json
+++ b/app/composer.json
@@ -14,7 +14,8 @@
     "yiisoft/yii2-composer": "2.0.4",
     "yiisoft/yii2-debug": "2.0.6",
     "yiisoft/yii2-gii": "2.0.5",
-    "kartik-v/yii2-widget-fileinput": "v1.0.5"
+    "kartik-v/yii2-widget-fileinput": "v1.0.5",
+    "kartik-v/yii2-widget-select2": "v2.0.8"
   },
   "extra": {
     "asset-installer-paths": {
