--- a/app/composer.json
+++ b/app/composer.json
@@ -17,7 +17,9 @@
     "kartik-v/yii2-widget-fileinput": "v1.0.5",
     "kartik-v/yii2-widget-select2": "v2.0.8",
     "kartik-v/yii2-datecontrol": "v1.9.4",
-    "kartik-v/yii2-widgets": "v3.4.0"
+    "kartik-v/yii2-widgets": "v3.4.0",
+    "Codeception/Codeception": "^2.2",
+    "yiisoft/yii2-codeception": "^2.0"
   },
   "extra": {
     "asset-installer-paths": {
