--- a/app/composer.json
+++ b/app/composer.json
@@ -18,13 +18,18 @@
     "kartik-v/yii2-widget-select2": "v2.0.8",
     "kartik-v/yii2-datecontrol": "v1.9.4",
     "kartik-v/yii2-widgets": "v3.4.0",
-    "Codeception/Codeception": "^2.2",
-    "yiisoft/yii2-codeception": "^2.0"
+    "Codeception/Codeception": "^2.2"
   },
   "extra": {
     "asset-installer-paths": {
       "npm-asset-library": "vendor/npm",
       "bower-asset-library": "vendor/bower"
     }
+  },
+  "require-dev": {
+    "yiisoft/yii2-codeception": "^2.0",
+    "codeception/codeception": "^2.2",
+    "yiisoft/yii2-faker": "^2.0",
+    "codeception/specify": "^0.4.5"
   }
 }
