--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ Thumbs.db
 
 # composer vendor dir
 /vendor
-/vendor/bower/*
 
 # yii runtime dir
 /runtime
@@ -31,5 +30,8 @@ phpunit.phar
 /phpunit.xml
 
 #config
-/config
+/config/*
+
+
 tests/_output/*
+/web/assets/*
