--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,10 @@
     "codeception/specify": "^0.4.5"
   },
   "config": {
-    "process-timeout": 1800
+    "process-timeout": 1800,
+    "fxp-asset": {
+            "enabled": false
+    }
   },
   "scripts": {
     "post-create-project-cmd": [
@@ -54,5 +57,11 @@
       "npm-asset-library": "vendor/npm",
       "bower-asset-library": "vendor/bower"
     }
-  }
+  },
+   "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    ]
 }
