--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
     "issues": "https://github.com/ToSchQLB/letter-safe/issues?state=open",
     "source": "https://github.com/ToSchQLB/letter-safe"
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "require": {
-    "php": ">=5.4.0",
-    "yiisoft/yii2": "2.0.9",
-    "yiisoft/yii2-composer": "2.0.4",
+    "php": ">=5.6.0",
+    "yiisoft/yii2": "^2.0.13",
+    "yiisoft/yii2-composer": "^2.0.4",
     "kartik-v/yii2-widget-fileinput": "v1.0.5",
     "kartik-v/yii2-widget-select2": "v2.0.8",
     "kartik-v/yii2-datecontrol": "v1.9.4",
