--- a/docker/webserver/dockerfile
+++ b/docker/webserver/dockerfile
@@ -10,7 +10,10 @@ RUN apt-get update && apt-get -y install \
         wget \
         git \
         zlib1g-dev \
-        && docker-php-ext-install zip gd mysqli
+        && docker-php-ext-install mbstring
+        && docker-php-ext-install zip
+        && docker-php-ext-install gd
+        && docker-php-ext-install mysqli
 
 COPY ./install-composer.sh /var/www/html/
 
