--- a/docker/webserver/dockerfile
+++ b/docker/webserver/dockerfile
@@ -28,11 +28,14 @@ RUN cd /var/www/html \
 
 WORKDIR /var/www/html/letter-safe
 
-COPY entrypoint.sh /entrypoint.sh
+COPY entrypoint.sh /var/www/html/letter-safe/entrypoint.sh
+
+RUN chmod 0777 var/www/html/letter-safe/entrypoint.sh
 
 #COPY entrypoint.sh /usr/local/bin/
 #RUN ln -s usr/local/bin/entrypoint.sh /entrypoint.sh # backwards compat
-ENTRYPOINT ["/entrypoint.sh"]
+#ENTRYPOINT ["/entrypoint.sh"]
+CMD ["./entrypoint.sh"]
 
 EXPOSE 80/tcp
 
