--- a/docker/webserver/dockerfile
+++ b/docker/webserver/dockerfile
@@ -1,6 +1,6 @@
 
 #FROM php:5.6-apache
-FROM php:7.3-apache-stretch
+FROM php:7.2-apache
 
 #install modules
 RUN apt-get update && apt-get -y install \
@@ -12,11 +12,14 @@ RUN apt-get update && apt-get -y install \
         wget \
         git \
         zlib1g-dev \
-        libpng-dev
+        libpng-dev \
+        libzip-dev
         
-RUN docker-php-ext-install mbstring zip gd mysqli\
-        && docker-php-ext-install -j5 pdo \
-        && docker-php-ext-install pdo_mysql
+RUN docker-php-ext-install mbstring 
+RUN docker-php-ext-install zip gd 
+RUN docker-php-ext-install mysqli
+RUN docker-php-ext-install pdo
+RUN docker-php-ext-install pdo_mysql
 
 #COPY ./install-composer.sh /var/www/html/
 
