--- a/docker/webserver/dockerfile
+++ b/docker/webserver/dockerfile
@@ -28,6 +28,7 @@ RUN cd /var/www/html \
     && git clone https://github.com/toschqlb/letter-safe \
     && cd letter-safe \
     && php ../composer.phar install
+    && php ../composer.phar update
 
 ENV LETTERSAFE_DB_SERVER db
 ENV LETTERSAFE_DB_DB letter-safe
