--- a/docker/webserver/dockerfile
+++ b/docker/webserver/dockerfile
@@ -37,6 +37,9 @@ ENV LETTERSAFE_DB_PASSWORD letter-safe
 
 WORKDIR /var/www/html/letter-safe
 
+RUN chmod 0777 /var/www/html/letter-safe/web/assets
+RUN chmod -R 0777 /var/www/html/letter-safe/runtime
+
 COPY entrypoint.sh /var/www/html/letter-safe/entrypoint.sh
 RUN chmod 0777 /var/www/html/letter-safe/entrypoint.sh
 #COPY entrypoint.sh /entrypoint.sh
