--- a/docker/webserver/dockerfile
+++ b/docker/webserver/dockerfile
@@ -42,10 +42,9 @@ RUN chmod -R 0777 /var/www/html/letter-safe/runtime
 
 COPY entrypoint.sh /var/www/html/letter-safe/entrypoint.sh
 RUN chmod 0777 /var/www/html/letter-safe/entrypoint.sh
-#COPY entrypoint.sh /entrypoint.sh
 
-#COPY entrypoint.sh /usr/local/bin/
-#RUN ln -s usr/local/bin/entrypoint.sh /entrypoint.sh # backwards compat
+COPY .files/000-default.conf /etc/apache2/sites-available/000-default.conf
+
 CMD ["./entrypoint.sh"]
 CMD ["apache2-foreground"]
 
