--- a/docker/webserver/dockerfile
+++ b/docker/webserver/dockerfile
@@ -43,7 +43,8 @@ RUN chmod -R 0777 /var/www/html/letter-safe/runtime
 COPY entrypoint.sh /var/www/html/letter-safe/entrypoint.sh
 RUN chmod 0777 /var/www/html/letter-safe/entrypoint.sh
 
-COPY .files/000-default.conf /etc/apache2/sites-available/000-default.conf
+COPY ./files/000-default.conf /etc/apache2/sites-available/000-default.conf
+RUN echo "* *     * * *   root    php /var/html/www/letter-safe/yii queue/execute" >> /etc/crontab
 
 CMD ["./entrypoint.sh"]
 CMD ["apache2-foreground"]
