--- a/docker/webserver/files/000-default.conf
+++ b/docker/webserver/files/000-default.conf
@@ -11,6 +11,8 @@
         ServerAdmin webmaster@localhost
         DocumentRoot /var/www/html/letter-safe/web
 
+        AllowEncodedSlashes On
+
         # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
         # error, crit, alert, emerg.
         # It is also possible to configure the loglevel for particular
