--- a/docker/webserver/dockerfile
+++ b/docker/webserver/dockerfile
@@ -39,12 +39,13 @@ WORKDIR /var/www/html/letter-safe
 
 RUN chmod 0777 /var/www/html/letter-safe/web/assets
 RUN chmod -R 0777 /var/www/html/letter-safe/runtime
+RUN chmod -R 0777 /var/www/html/letter-safe/web/data
 
 COPY entrypoint.sh /var/www/html/letter-safe/entrypoint.sh
 RUN chmod 0777 /var/www/html/letter-safe/entrypoint.sh
 
 COPY ./files/000-default.conf /etc/apache2/sites-available/000-default.conf
-RUN echo "* *     * * *   root    php /var/html/www/letter-safe/yii queue/execute" >> /etc/crontab
+RUN echo "* * * * * php /var/www/html/letter-safe/yii queue/execute > /dev/null 2>&1 &" >> /etc/crontab
 
 CMD ["./entrypoint.sh"]
 CMD ["apache2-foreground"]
