--- a/docker/webserver/dockerfile
+++ b/docker/webserver/dockerfile
@@ -46,7 +46,7 @@ COPY entrypoint.sh /var/www/html/letter-safe/entrypoint.sh
 RUN chmod 0777 /var/www/html/letter-safe/entrypoint.sh
 
 COPY ./files/000-default.conf /etc/apache2/sites-available/000-default.conf
-RUN echo "* * * * * php /var/www/html/letter-safe/yii queue/execute > /dev/null 2>&1 &" >> /etc/crontab
+RUN echo "* *   * * *   root    php /var/www/html/letter-safe/yii queue/execute > /dev/null 2>&1 &" >> /etc/crontab
 
 ENTRYPOINT ["./entrypoint.sh"]
 #CMD ["apache2-foreground"]
