--- a/docker/webserver/dockerfile
+++ b/docker/webserver/dockerfile
@@ -1,4 +1,3 @@
-
 #FROM php:5.6-apache
 FROM php:7.2-apache
 
@@ -14,13 +13,17 @@ RUN apt-get update && apt-get -y install \
         zlib1g-dev \
         libpng-dev \
         libzip-dev \
-        cron
+        cron \
+        libmagickwand-dev
         
 RUN docker-php-ext-install mbstring 
 RUN docker-php-ext-install zip gd 
 RUN docker-php-ext-install mysqli
 RUN docker-php-ext-install pdo
 RUN docker-php-ext-install pdo_mysql
+
+RUN pecl install imagick-3.4.3 \
+    && docker-php-ext-enable imagick
 
 #COPY ./install-composer.sh /var/www/html/
 
@@ -48,6 +51,7 @@ RUN chmod 0777 /var/www/html/letter-safe/entrypoint.sh
 COPY ./files/000-default.conf /etc/apache2/sites-available/000-default.conf
 RUN echo "* *   * * *   root    php /var/www/html/letter-safe/yii queue/execute > /dev/null 2>&1 &" >> /etc/crontab
 
+
 ENTRYPOINT ["./entrypoint.sh"]
 #CMD ["apache2-foreground"]
 
@@ -55,4 +59,3 @@ EXPOSE 80/tcp
 
 #ENTRYPOINT echo $LETTERSAFE_DB_SERVER
 #ENTRYPOINT /var/www/html/letter-safe/entrypoint.sh
-#CMD ["apache2-foreground
