--- a/docker/webserver/dockerfile
+++ b/docker/webserver/dockerfile
@@ -1,7 +1,6 @@
-#FROM php:5.6-apache
 FROM php:7.2-apache
 
-#install modules
+#install software
 RUN apt-get update && apt-get -y install \
         tesseract-ocr \
         tesseract-ocr-deu \
@@ -15,18 +14,19 @@ RUN apt-get update && apt-get -y install \
         libzip-dev \
         cron \
         libmagickwand-dev
-        
-RUN docker-php-ext-install mbstring 
-RUN docker-php-ext-install zip gd 
-RUN docker-php-ext-install mysqli
-RUN docker-php-ext-install pdo
-RUN docker-php-ext-install pdo_mysql
 
-RUN pecl install imagick-3.4.3 \
-    && docker-php-ext-enable imagick
+#install PHP-Modules
+RUN docker-php-ext-install \
+        mbstring \
+        zip \
+        gd \
+        mysqli \
+        pdo \
+        pdo_mysql \
+&& pecl install imagick-3.4.3 \
+&& docker-php-ext-enable imagick
 
-#COPY ./install-composer.sh /var/www/html/
-
+#prepare letter-safe
 RUN cd /var/www/html \
     && wget -q https://getcomposer.org/composer.phar \
     && git clone https://github.com/toschqlb/letter-safe \
@@ -41,21 +41,16 @@ ENV LETTERSAFE_DB_PASSWORD letter-safe
 
 WORKDIR /var/www/html/letter-safe
 
-RUN chmod 0777 /var/www/html/letter-safe/web/assets
-RUN chmod -R 0777 /var/www/html/letter-safe/runtime
-RUN chmod -R 0777 /var/www/html/letter-safe/web/data
-
 COPY entrypoint.sh /var/www/html/letter-safe/entrypoint.sh
-RUN chmod 0777 /var/www/html/letter-safe/entrypoint.sh
-
 COPY ./files/000-default.conf /etc/apache2/sites-available/000-default.conf
-RUN echo "* *   * * *   root    php /var/www/html/letter-safe/yii queue/execute > /dev/null 2>&1 &" >> /etc/crontab
 
+#Schreibrechte und Crontab
+RUN chmod 0777 /var/www/html/letter-safe/web/assets \
+&& chmod -R 0777 /var/www/html/letter-safe/runtime \
+&& chmod -R 0777 /var/www/html/letter-safe/web/data \
+&& chmod 0777 /var/www/html/letter-safe/entrypoint.sh \
+&& echo "* *   * * *   root    php /var/www/html/letter-safe/yii queue/execute > /dev/null 2>&1 &" >> /etc/crontab
 
 ENTRYPOINT ["./entrypoint.sh"]
-#CMD ["apache2-foreground"]
 
 EXPOSE 80/tcp
-
-#ENTRYPOINT echo $LETTERSAFE_DB_SERVER
-#ENTRYPOINT /var/www/html/letter-safe/entrypoint.sh
