--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -19,6 +19,9 @@ services:
       - db
     ports:
       - 8080:80
+    volumes:
+      - ls_data:/var/www/html/letter-safe/web/data
+      - ls_sl:/var/www/html/letter-safe/web/img/sender/logo
     restart: always
     environment:
       - LETTERSAFE_DB_SERVER=db
@@ -28,3 +31,5 @@ services:
 
 volumes:
   data_db:
+  ls_data:
+  ls_sl:
